@@ -20,7 +20,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.54
+Release: 0.55
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -464,6 +464,9 @@ exit 0
 %{__includedir}/popt.h
 
 %changelog
+* Fri Jan 10 2003 Jeff Johnson <jbj@redhat.com> 4.2-0.55
+- fix: obscure corner case(s) with rpmvercmp (#50977).
+
 * Wed Jan  8 2003 Jeff Johnson <jbj@redhat.com> 4.2-0.54
 - python: put rpmmodule.so where python expects to find.
 - add brp-strip-static-archive build root policy helper.
