@@ -1,7 +1,7 @@
 #/*! \page config_rpmrc Default configuration: /usr/lib/rpm/rpmrc
 # \verbatim
 #
-# $Id: rpmrc.in,v 2.53 2002/11/27 01:28:55 jbj Exp $
+# $Id: rpmrc.in,v 2.54 2003/01/10 20:34:26 jbj Exp $
 #
 # This is a global RPM configuration file. All changes made here will
 # be lost when the rpm package is upgraded. Any per-system configuration
@@ -118,6 +118,9 @@ arch_canon:	i370: i370	14
 arch_canon:	s390x: s390x	15
 
 arch_canon:	ppc64:	ppc64	16
+
+arch_canon:	sh: sh		17
+arch_canon:	xtensa: xtensa	18
 
 #############################################################
 # Canonical OS names and numbers
